# CapivaraVM

./: .gitignore  README.md  pyproject.toml
capivara/classfile/: attributes.py  constant_pool.py  members.py  reader.py
capivara/cli/: __main__.py
capivara/interp/: loop.py
capivara/loader/: classpath.py  loader.py
capivara/runtime/: frame.py  heap.py  klass.py  strings.py  values.py
capivara/tests/: test_classfile_cp_basic.py  test_classfile_members_attrs.py  test_cli_bootstrap.py  test_interp_basic.py  test_invocations_static.py  test_loader_dirs.py  test_objects_fields.py  test_runtime_basics.py
capivara/tests/fixtures/: A.java  B.java  CPDemo.java  ChainCalls.java  FlowOps.java  InheritStatic.java  InstFields.java  SigDemo.java  StaticsDemo.java  SumN.java  VirtCall.java
capivara/util/: bytesio.py  descriptors.py  flags.py  logging.py  opcodes.py
